# tgstorage

./: .env  .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.install.yml  docker-compose.prod.yml  docker-compose.yml  prod_install.sh  pyproject.toml  requirements.txt
app/: __init__.py  events.py  fast_telethon.py  settings.py  utils.py
app/db/: __init__.py
app/db/crud/: crud.py  file.py  folder.py  resource.py  share.py  user.py
app/db/models/: __init__.py  abstract_model.py  abstract_resource.py  file.py  folder.py  shared_resource.py  timestamp_mixin.py  user.py
app/db/schemas/: __init__.py  file.py  folder.py  share.py  user.py
app/dependencies/: auth.py  connect_bot.py  db.py  settings.py
app/forms/: user.py
app/routers/: files.py
app/routes/: __init__.py  auth.py  file.py  files.py  folder.py  folders.py  index.py  shares.py  user.py
backend/: .env.example  Dockerfile  prestart.sh  pyproject.toml  uvicorn_proxy_worker.py
backend/app/: fast_telethon.py  redis_prefix.py  settings.py  utils.py
backend/app/db/: __init__.py
backend/app/db/crud/: file.py  folder.py  resource.py  share.py  user.py
backend/app/dependencies/: chat.py
backend/app/forms/: user.py
backend/app/middlewares/: __init__.py  limit_upload_size.py
backend/app/routes/: auth.py  folder.py  share.py
services/mysql/: .env.example
services/nginx/: crontab.example
services/nginx/templates/: default.conf.template
services/nginx/templates-install/: default.conf.template
services/nginx/templates_dev/: default.conf.template
(+6 files in other folders)
