[tool.aerich]
tortoise_orm = "app.db.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."

[tool.poetry]
name = "tgstorage"
version = "0.1.0"
description = ""
authors = ["Mevaser <mevaser.rotner@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.18.2"
fastapi = "^0.78.0"
starlette-session = "^0.4.2"
redis = "^4.3.4"
Telethon = "^1.24.0"
cryptography = "^37.0.4"
Authlib = "^1.0.1"
httpx = "^0.23.0"
Starlette-WTF = "^0.4.3"
tortoise-orm = "^0.19.2"
python-dotenv = "^0.20.0"
fastapi-restful = "^0.4.3"
teleredis = "^0.1.3"
Jinja2 = "^3.1.2"
aerich = "^0.6.3"
aioredis = "^2.0.1"

[tool.poetry.dev-dependencies]
pylint = "^2.14.4"
pylint-django = "^2.5.3"
Django = "^4.0.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
